--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,8 +19,20 @@ image{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid rgb(225, 224, 224);
-    border-radius: 5px;
+    /* border: 1px solid rgb(225, 224, 224);
+    border-radius: 5px; */
+
+    border-right-width: 1px;
+        border-right-style: solid;
+        border-right-color: rgb(225, 224, 224);
+        
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: rgb(225, 224, 224);
+        
+        border-left-width: 1px;
+        border-left-style: solid;
+        border-left-color: rgb(225, 224, 224);
 }
 
 p{
@@ -42,7 +54,7 @@ span{
     justify-content: center;
     align-items: center;
 
-    height: 100px;
+    height: 130px;
     background-color: rgb(150, 150, 150, 0.2);
 }
 
@@ -75,3 +87,72 @@ button:hover{
     display: flex;
     justify-content: center;
 }
+/* ---------checkbox----------- */
+
+.checkbox-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    margin: 5px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
