--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,14 +13,6 @@ image{
 
 .photo-card{
     margin: 5px;
-    
-}
-.info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* border: 1px solid rgb(225, 224, 224);
-    border-radius: 5px; */
 
     border-right-width: 1px;
         border-right-style: solid;
@@ -33,6 +25,18 @@ image{
         border-left-width: 1px;
         border-left-style: solid;
         border-left-color: rgb(225, 224, 224);
+    
+}
+.photo-card:hover{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding-left: 15px;
+
 }
 
 p{
