--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,7 +66,9 @@ span{
 
     height: 150px;
     background-color: rgb(150, 150, 150, 0.2);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.10), 0px 4px 4px rgba(0, 0, 0, 0.05), 1px 4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.10), 
+    0px 4px 4px rgba(0, 0, 0, 0.05), 
+    1px 4px 6px rgba(0, 0, 0, 0.05);
 }
 
 input{
@@ -88,6 +90,10 @@ button{
 
     background-color: rgb(4, 120, 128);
     color: #fafafa;
+
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.10), 
+    0px 4px 4px rgba(0, 0, 0, 0.10), 
+    1px 4px 6px rgba(0, 0, 0, 0.10);
 }
 
 button:hover{
