--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .gallery{
     display: flex;
     flex-wrap: wrap;
@@ -9,7 +13,16 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
-  }
+}
+.image-horizontal{
+  width: 320px;
+  height: 205px;
+}
+.image-vertical{
+  height: 420px;
+  width: 310px;
+}
+
 a{
     text-decoration: none
 }
