--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,7 +94,10 @@ span{
 
 
 /* -------------Btn------------------ */
-
+.icon-search{
+  width: 20px;
+  height: 20px;
+}
 .clear-btn{
   position: absolute;
 
@@ -114,6 +117,7 @@ span{
 }
 
 .search-btn,.load-more{
+
     width: 70px;
     height: 40px;
 
