--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,6 +150,35 @@ span{
 
 }
 
+/* ----------------btn back top------------------- */
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 80px; /* Place the button at the bottom of the page */
+  right: 100px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgb(4, 120, 128); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+
+  width: 70px;
+  height: 70px;
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.10), 
+    0px 4px 4px rgba(0, 0, 0, 0.10), 
+    1px 4px 6px rgba(0, 0, 0, 0.10);
+}
+
+#myBtn:hover {
+  background-color: rgb(2, 104, 111); /* Add a dark-grey background on hover */
+  transform: scale(1.1);
+}
 
 
 
